prevent-deleting-resources/prevent-deleting-ingress/2-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyIngressDelete
metadata:
  name: deny-ingress-delete
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Ingress"]
  parameters:
    ingress: test
